# InnoVateSG

./: README.md
plugins/cat_advanced_tools/: settings.json
plugins/lozio/: lozio.py  plugin.json
server/: pyproject.toml  server.py
